--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,9 +1,9 @@
 <div class='main-container'>
     <ul class='toolbar-list'>
         <li class='toolbar-list-element main-logo-element'><mat-icon class='main-logo' svgIcon="logo"></mat-icon></li>
-        <li [routerLink]="['/']" class='toolbar-list-element'>Home</li>
-        <li class='toolbar-list-element'>Contact</li>
-        <li [routerLink]="['/app/projects']" class='toolbar-list-element application-link'>Go to application</li>
+        <!-- <li class='toolbar-list-element'>Home</li> -->
+        <li (click)="scroll('contact')" class='toolbar-list-element contact-link'>Contact</li>
+        <li [routerLink]="['/app/projects']" class='toolbar-list-element application-link'> <span>Go to application</span><mat-icon svgIcon="next-icon"></mat-icon></li>
     </ul>
     
     <div class="slider gallery items-3">
@@ -37,7 +37,7 @@
 <div class='profits-cards'>
     <div class='card idea-card'>
         <div class='img-icon idea-bulb-img'></div>
-        <p class='card-paragraph'>Everything revolves around your idea.Our task is to enable you to find the best people for its implementation.</p>
+        <p class='card-paragraph'>Everything revolves around your idea. Our task is to enable you to find the best people for its implementation.</p>
     </div>
     <div class=' card work-card'>
         <div class='img-icon worker-img'></div>
@@ -46,7 +46,7 @@
 
     <div class=' card team-card'>
         <div class='img-icon team-img'></div>
-        <p class='card-paragraph'>We belive that you can organize work in an eve more flexible way. We encourage you to set up a team to meet the bigger challenges.</p>
+        <p class='card-paragraph'>We belive that you can organize work in an even more flexible way. We encourage you to set up a team to meet the bigger challenges.</p>
     </div>
 
 </div>
@@ -77,7 +77,7 @@
 <div class='separator'></div>
 <div class='separator'></div>
 
-<div class='contact-container'>
+<div id='contact' class='contact-container'>
     <p class='contact-paragraph'>If you have question you can send mesage to us. If you do't have any questions you can move to the aplicaton by the link on the top. </p>
     <form class='form-container' [formGroup]='messageForm' (ngSubmit)='sendEmail()'>
         <mat-form-field >
@@ -104,11 +104,6 @@
     <p class='cookies-paragraph'>This website uses cookies to give you the best, most revelant experience. If you continue without chanching your settings, we will assume that you are happy to receive all cookies on this website. You can chage which cookies are set at any time.</p>
 </div>
 
-
-<!--  -->
-<div class=''>
-
-</div>
 
 
 
